# UnderTerm

./: Cargo.toml  Cross.toml  README.md  crash_log.txt  debug.txt  dialogues.json  flake.nix  game_data.json  shell.nix
.github/workflows/: rusty.yml
assets/fonts/: miniwi.flf
assets/map/map_0_0/: data.json  sprite.ans
assets/map/map_0_1/: data.json
assets/map/map_1_2/: data.json  sprite.ans
assets/sprites/: peefest.ans
assets/sprites/ME/idle/: default.ans
assets/sprites/animation/: 0.ans  1.ans  2.ans  3.ans  4.ans  5.ans
assets/sprites/enemy/not_a_placeholder/: battle_3.ans  battle_hehehe.ans  battle_meh.ans  battle_more_neutral.ans  battle_neutral.ans  battle_smile.ans
assets/sprites/enemy/placeholder/: 1.ans
assets/sprites/faces/: face_3.ans  face_determined.ans  face_determined_smile.ans  face_hehehe.ans  face_huh.ans  face_meh.ans  face_neutral.ans  face_sight.ans  face_smile.ans
assets/sprites/frisk/idle/: frisk_idle_back.ans  frisk_idle_front.ans  frisk_idle_left.ans  frisk_idle_right.ans
assets/sprites/frisk/walk/: frisk_walk_back_1.ans  frisk_walk_back_2.ans  frisk_walk_front_1.ans  frisk_walk_front_2.ans  frisk_walk_left.ans  frisk_walk_right.ans
assets/sprites/map/map_1/: sprite.ans
src/: assets.rs  crash_handler.rs  game_loop.rs  game_state.rs  input.rs  lib.rs  main.rs  map.rs  player.rs  ui.rs  utils.rs  windows_input.rs
src/audio/: mod.rs
src/debug/: draw.rs  input.rs
src/game/: attack.rs  battle.rs  config.rs  deltarune.rs  dialogue.rs  face.rs  map.rs  mod.rs  player.rs  state.rs  utils.rs
