cargo-features = ["edition2024"]

[package]
name = "under_term"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.29.0", features = ["crossterm", "serde"] }
ansi-to-tui = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1.x"
rodio = "0.18.0"
minimp3 = "0.5.0"
rand = "0.8"
figlet-rs = "0.1.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[[bin]]
name = "dialogue_editor"
path = "src/bin/dialogue_editor.rs"